[Feat] 탭 레이아웃 기능 추가

--- a/app/src/main/res/layout/activity_list_information.xml
+++ b/app/src/main/res/layout/activity_list_information.xml
@@ -70,10 +70,10 @@
 
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center"
+            android:layout_marginStart="35dp"
             android:layout_marginTop="138dp"
             android:layout_marginBottom="47dp"
             >
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginEnd="35dp"
+                android:layout_marginEnd="57dp"
                 android:gravity="center">
                 <ImageView
                     android:layout_width="41dp"
@@ -101,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginEnd="35dp"
+                android:layout_marginEnd="57dp"
                 android:gravity="center">
 
                 <ImageView
@@ -122,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginEnd="35dp"
+                android:layout_marginEnd="57dp"
                 android:gravity="center">
 
                 <ImageView
@@ -143,6 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_marginEnd="35dp"
                 android:gravity="center">
 
                 <ImageView
@@ -170,7 +171,15 @@
             android:background="#E4E4E2"/>
 
 
-        <!--탭 레이아웃-->
+    <!--탭 레이아웃-->
+
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/divider"
+        android:theme="@style/TabTheme">
+
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
@@ -185,9 +194,6 @@
             app:tabTextAppearance="@style/CustomTabTextAppearance"/>
 
 
-
-    
-    
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
@@ -195,254 +201,7 @@
             android:layout_below="@id/tabs"/>
 
 
-
-
-        <ImageView
-            android:layout_width="320dp"
-            android:layout_height="186dp"
-            android:src="@drawable/ic_star"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="291dp" />
-
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="494dp">
-
-            <ImageView
-                android:id="@+id/location"
-                android:layout_width="24dp"
-                android:layout_height="15dp"
-                android:src="@drawable/ic_location"
-                android:layout_marginTop="2dp"
-                android:layout_marginStart="14dp" />
-
-            <TextView
-                android:id="@+id/locationtext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/location"
-                android:layout_marginStart="3dp"
-                android:textSize="12sp"
-                android:text="도로명" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="서울 서대문구 연희로 248 1층"
-                android:layout_marginStart="92dp"
-                android:textSize="12sp" />
-
-
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/location"
-                android:layout_marginStart="3dp"
-                android:layout_marginTop="25dp"
-                android:textSize="12sp"
-                android:text="지번" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="연희동 168-6"
-                android:layout_marginTop="25dp"
-                android:layout_marginStart="92dp"
-                android:textSize="12sp" />
-
-        </RelativeLayout>
-
-
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="555dp">
-
-            <ImageView
-                android:id="@+id/time"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:src="@drawable/ic_time"
-                android:layout_marginTop="2dp"
-                android:layout_marginStart="21dp" />
-
-            <TextView
-                android:id="@+id/timetext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/time"
-                android:layout_marginStart="8dp"
-                android:textSize="12sp"
-                android:text="평일" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="0:00 ~ 24:00"
-                android:layout_marginStart="92dp"
-                android:textSize="12sp" />
-
-
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/time"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="25dp"
-                android:textSize="12sp"
-                android:text="토요일" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="25dp"
-                android:layout_marginStart="92dp"
-                android:textSize="12sp"
-                android:text="0:00 ~ 24:00"/>
-
-
-
-
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/time"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="50dp"
-                android:textSize="12sp"
-                android:text="공휴일" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="50dp"
-                android:layout_marginStart="92dp"
-                android:textSize="12sp"
-                android:text="0:00 ~ 24:00"/>
-
-        </RelativeLayout>
-
-
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="639dp">
-
-            <ImageView
-                android:id="@+id/call"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:src="@drawable/ic_call"
-                android:layout_marginTop="2dp"
-                android:layout_marginStart="21dp" />
-
-            <TextView
-                android:id="@+id/calltext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/call"
-                android:layout_marginStart="8dp"
-                android:textSize="12sp"
-                android:text="번호" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="02-879-4317"
-                android:layout_marginStart="92dp"
-                android:textSize="12sp" />
-
-
-
-        </RelativeLayout>
-
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="674dp">
-
-            <ImageView
-                android:id="@+id/use"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:src="@drawable/ic_userable"
-                android:layout_marginTop="2dp"
-                android:layout_marginStart="21dp" />
-
-            <TextView
-                android:id="@+id/usetext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/use"
-                android:layout_marginStart="8dp"
-                android:textSize="12sp"
-                android:text="동시 가능 사용대 수" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2"
-                android:layout_marginStart="152dp"
-                android:textSize="12sp" />
-
-
-        </RelativeLayout>
-
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="710dp">
-
-            <ImageView
-                android:id="@+id/push"
-                android:layout_width="12dp"
-                android:layout_height="13dp"
-                android:src="@drawable/ic_air"
-                android:layout_marginTop="2dp"
-                android:layout_marginStart="21dp" />
-
-            <TextView
-                android:id="@+id/pushtext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/push"
-                android:layout_marginStart="8dp"
-                android:textSize="12sp"
-                android:text="공기압주입 가능 여부" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="151dp"
-                android:textSize="12sp"
-                android:textColor="#FF4C13"
-                android:text="N"/>
-
-
-        </RelativeLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
 
 
