--- a/app/src/main/res/layout/activity_community_writing.xml
+++ b/app/src/main/res/layout/activity_community_writing.xml
@@ -63,12 +63,11 @@
             android:textColor="@color/gray_scale8"
             android:theme="@style/SpinnerTheme"
             android:background="@drawable/background_spinner_option"
-            android:dropDownWidth="250dp"
             android:popupBackground="@color/white"
             android:overlapAnchor="false"
-            app:layout_constraintWidth_percent="0.95"
             app:layout_constraintTop_toTopOf="@id/divider1"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/divider2" />
 
         <FrameLayout
@@ -91,7 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="2dp"
             android:background="@color/gray_scale4"
-            android:layout_marginTop="15dp"
+
             app:layout_constraintTop_toBottomOf="@id/community_select_category"
             app:layout_constraintStart_toStartOf="parent"/>
 
