--- a/app/src/main/res/layout/item_select_category.xml
+++ b/app/src/main/res/layout/item_select_category.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp">
+    android:layout_height="50dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/item_category_title"
@@ -13,14 +11,17 @@
         android:text="카테고리를 선택해 주세요"
         android:textSize="16sp"
         android:textColor="@color/gray_scale8"
-        android:padding="10dp"
+        android:gravity="end"
+        android:layout_marginStart="20dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
     <ImageView
         android:id="@+id/item_category_checkbox"
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:src="@drawable/check_box"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/item_category_title"
         app:layout_constraintBottom_toBottomOf="@id/item_category_title"/>
@@ -30,6 +31,7 @@
         android:layout_height="15dp"
         android:src="@drawable/uncheck_box"
         android:visibility="gone"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/item_category_title"
         app:layout_constraintBottom_toBottomOf="@id/item_category_title"/>
