--- a/app/src/main/res/layout/item_community_feed.xml
+++ b/app/src/main/res/layout/item_community_feed.xml
@@ -62,29 +62,35 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/item_community_post_user_profile"
             app:layout_constraintStart_toStartOf="parent"/>
-        <TextView
-            android:id="@+id/item_community_post_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="제목"
-            android:textSize="16sp"
-            android:textColor="@color/gray_scale8"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            app:layout_constraintTop_toBottomOf="@id/item_community_post_category_view"
-            app:layout_constraintStart_toStartOf="parent"/>
 
-        <TextView
-            android:id="@+id/item_community_post_content"
+        <LinearLayout
+            android:id="@+id/item_community_post_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="내용"
-            android:textSize="14sp"
-            android:textColor="@color/gray_scale8"
+            android:orientation="vertical"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            app:layout_constraintTop_toBottomOf="@id/item_community_post_title"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/item_community_post_category_view"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:id="@+id/item_community_post_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="제목"
+                android:textSize="16sp"
+                android:textColor="@color/gray_scale8"
+                android:layout_marginTop="5dp" />
+            <TextView
+                android:id="@+id/item_community_post_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="내용"
+                android:textSize="14sp"
+                android:textColor="@color/gray_scale8"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@id/item_community_post_title"
+                app:layout_constraintStart_toStartOf="parent"/>
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/item_community_post_image"
@@ -93,7 +99,7 @@
             android:orientation="horizontal"
             android:layout_marginStart="10dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/item_community_post_content"
+            app:layout_constraintTop_toBottomOf="@id/item_community_post_container"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <ImageView
