--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintTop_toTopOf="@id/cv_sos"
         android:hint="00구 00동"
+        style="@style/Title3"
         android:textColor="@color/gray_scale6"
         android:paddingStart="9dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +46,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        style="@style/Body2"
         android:id="@+id/tv_recent_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -57,6 +59,7 @@
 
 
     <TextView
+        style="@style/Body2"
         android:id="@+id/tv_all_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
