--- a/app/src/main/res/layout/dialog_custom.xml
+++ b/app/src/main/res/layout/dialog_custom.xml
@@ -24,6 +24,7 @@
         />
 
     <TextView
+        style="@style/Title1"
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,6 +35,7 @@
         android:layout_marginBottom="10dp"/>
 
     <TextView
+        style="@style/Body4"
         android:id="@+id/tv_subTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,6 +44,7 @@
         android:gravity="center" />
 
     <androidx.appcompat.widget.AppCompatButton
+        style="@style/Title2"
         android:id="@+id/btn_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
