--- a/app/src/main/res/layout/dialog_search_delete.xml
+++ b/app/src/main/res/layout/dialog_search_delete.xml
@@ -17,6 +17,7 @@
 
 
     <TextView
+        style="@style/Title2"
         android:id="@+id/tv_dialog_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,6 +28,7 @@
         android:layout_marginBottom="5dp"/>
 
     <TextView
+        style="@style/Title2"
         android:id="@+id/tv_dialog_subTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,6 +37,7 @@
         android:gravity="center" />
 
     <androidx.appcompat.widget.AppCompatButton
+        style="@style/Title2"
         android:id="@+id/btn_delete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,6 +50,7 @@
         android:layout_marginTop="38dp" />
 
     <Button
+        style="@style/Title2"
         android:id="@+id/btn_back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
