--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -38,6 +38,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    style="@style/Title3"
                     android:id="@+id/tv_current_location"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
