--- a/app/src/main/res/layout/item_recent.xml
+++ b/app/src/main/res/layout/item_recent.xml
@@ -13,6 +13,7 @@
         />
 
     <TextView
+        style="@style/Body2"
         android:id="@+id/tv_searchLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
