--- a/app/src/main/res/values/font_style.xml
+++ b/app/src/main/res/values/font_style.xml
@@ -21,21 +21,35 @@
         <item name="android:includeFontPadding">false</item>
     </style>
 
-    <style name="Body1">
+    <style name="Title3">
         <item name="android:fontFamily">@font/pretendard_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingExtra">0sp</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="Body1">
+        <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">14sp</item>
         <item name="android:lineSpacingExtra">0sp</item>
         <item name="android:includeFontPadding">false</item>
     </style>
 
     <style name="Body2">
+        <item name="android:fontFamily">@font/pretendard_regular</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:lineSpacingExtra">0sp</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="Body3">
         <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">12sp</item>
         <item name="android:lineSpacingExtra">0sp</item>
         <item name="android:includeFontPadding">false</item>
     </style>
 
-    <style name="Body3">
+    <style name="Body4">
         <item name="android:fontFamily">@font/pretendard_regular</item>
         <item name="android:textSize">12sp</item>
         <item name="android:lineSpacingExtra">0sp</item>
