--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -35,6 +35,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 
+        <ImageView
+            android:id="@+id/ic_profile_camera"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_camera"
+            app:layout_constraintBottom_toBottomOf="@id/iv_profile"
+            app:layout_constraintEnd_toEndOf="@id/iv_profile" />
+
 
         <TextView
             style="@style/Title2"
@@ -54,7 +62,7 @@
             android:id="@+id/tv_profile_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="6dp"
             android:text="프로필 수정하기"
             app:layout_constraintStart_toStartOf="@id/tv_nickname"
             app:layout_constraintTop_toBottomOf="@id/tv_nickname" />
@@ -353,7 +361,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="22dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/divide_3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -365,6 +373,7 @@
                 android:src="@drawable/ic_logout" />
 
             <TextView
+                style="@style/Body2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="로그아웃"
@@ -373,14 +382,24 @@
                 android:layout_marginStart="8dp" />
         </LinearLayout>
 
-        <View
-            android:id="@+id/divide_4"
+        <FrameLayout
+            android:id="@+id/layout_withdraw"
             android:layout_width="match_parent"
-            android:layout_height="13dp"
-            android:layout_marginTop="15dp"
+            android:layout_height="70dp"
             android:background="@color/gray_scale3"
-            app:layout_constraintTop_toBottomOf="@+id/btn_logout"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btn_logout">
+            <TextView
+                android:id="@+id/tv_withdraw"
+                style="@style/Body4"
+                android:textColor="@color/gray_scale6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/withdraw"
+                android:layout_gravity="center"
+                />
+        </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
