--- a/app/src/main/res/layout/item_block.xml
+++ b/app/src/main/res/layout/item_block.xml
@@ -21,6 +21,8 @@
         />
 
     <TextView
+        style="@style/Title3"
+        android:textColor="@color/gray_scale8"
         android:id="@+id/tv_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,6 +32,9 @@
         app:layout_constraintTop_toTopOf="@id/iv_profile" />
 
     <TextView
+        style="@style/Caption1"
+        android:textColor="@color/gray_scale6"
+        android:id="@+id/tv_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="kimhanjooo"
