--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -1,23 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/profileImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/userimage" />
+        android:src="@drawable/userimage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+        android:id="@+id/timeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/pretendard_light"
+        android:textColor="@color/gray_scale7"
+        android:textSize="10sp"
+        android:text="시간"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        app:layout_constraintStart_toEndOf="@id/profileImage"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -33,7 +50,7 @@
                 android:textSize="16sp"
                 android:layout_marginTop="16dp"
                 android:text="이름"
-                android:gravity="top" />
+                android:gravity="top"/>
 
             <TextView
                 android:id="@+id/userIdTextView"
@@ -44,29 +61,8 @@
                 android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/gray_scale7"
                 android:textSize="10sp"
-                android:text="아이디" />
-
-
-            <TextView
-                android:id="@+id/timeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="160dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/pretendard_light"
-                android:textColor="@color/gray_scale7"
-                android:textSize="10sp"
-                android:text="시간" />
-
+                android:text="아이디"/>
         </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal" >
-
-
 
         <TextView
             android:id="@+id/messageTextView"
@@ -77,20 +73,8 @@
             android:textSize="12sp"
             android:textColor="@color/gray_scale7"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="16dp"
             android:text="채팅 내용"
-            android:gravity="top"
-            />
-
-
-
-
-
-
-        </LinearLayout>
-
-
-
+            android:gravity="top"/>
     </LinearLayout>
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
