--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:text="채팅"
+        android:text="으아"
         android:fontFamily="@font/pretendard_semibold"
         android:textSize="16sp"
         android:layout_marginTop="47dp" />
@@ -20,17 +19,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/text_view"
-        android:layout_marginLeft="238dp"
+        android:layout_marginStart="238dp"
         android:layout_marginTop="45dp"
         android:src="@drawable/iv_search" />
-
-
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/image_view"
-        android:layout_marginLeft="5dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="45dp"
         android:src="@drawable/ic_sos" />
 
@@ -43,12 +40,11 @@
         android:layout_marginTop="88dp"
         android:background="#E4E4E2" />
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="104dp" />
-
+        android:layout_below="@id/rectangle_1"
+         />
 
 </RelativeLayout>
