[Feat] 채팅창에서 프로필페이지 연결

--- a/app/src/main/res/layout/activity_note_live_chat.xml
+++ b/app/src/main/res/layout/activity_note_live_chat.xml
@@ -29,12 +29,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/UserProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:src="@drawable/userimage" />
 
         <LinearLayout
+
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
