--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -49,8 +49,8 @@
 
     <ImageView
         android:id="@+id/community_detail_user_profile"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:src="@drawable/user_profile"
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
@@ -67,7 +67,7 @@
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@id/community_detail_user_profile"
         app:layout_constraintTop_toTopOf="@id/community_detail_user_profile"
-        app:layout_constraintBottom_toBottomOf="@id/community_detail_user_profile"/>
+        app:layout_constraintBottom_toTopOf="@id/community_detail_upload_time"/>
     <TextView
         android:id="@+id/community_detail_upload_time"
         android:layout_width="wrap_content"
@@ -90,11 +90,16 @@
         app:layout_constraintTop_toTopOf="@id/community_detail_user_profile"
         app:layout_constraintBottom_toBottomOf="@id/community_detail_user_profile"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/community_detail_category_view"
-        android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:orientation="horizontal"
+    <TextView
+        android:id="@+id/community_detail_help_category"
+        android:layout_width="50dp"
+        android:layout_height="22dp"
+        android:gravity="center"
+        android:text="요청 중"
+        android:textSize="12sp"
+        android:textColor="@color/gray_scale6"
+        android:background="@drawable/category_style"
+        android:visibility="gone"
         android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/community_detail_user_profile"
@@ -106,7 +111,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="10dp"
-        app:layout_constraintTop_toBottomOf="@id/community_detail_category_view"
+        app:layout_constraintTop_toBottomOf="@id/community_detail_help_category"
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
@@ -196,7 +201,7 @@
         android:id="@+id/community_detail_comment_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="댓글쓰기"
+        android:text="댓글"
         android:textColor="@color/gray_scale7"
         android:textSize="12sp"
         android:layout_marginStart="5dp"
@@ -214,5 +219,70 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="1"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/community_detail_comment_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/item_comment"
+        app:layout_constraintTop_toBottomOf="@id/divider2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <LinearLayout
+        android:id="@+id/community_detail_chatting_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageButton
+            android:id="@+id/camera_button"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="5dp"
+            android:background="@drawable/icon_camera"/>
+
+        <ImageButton
+            android:id="@+id/unlock_button"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/icon_unlock"/>
+
+        <EditText
+            android:id="@+id/message_input"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_edittext"
+            android:hint="채팅을 입력하세요"
+            android:padding="14dp"
+            android:textColor="#2D415F"
+            android:textSize="13sp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:inputType="textMultiLine"
+            android:maxLines="4"
+            android:minLines="1"
+            android:scrollbars="vertical"
+            android:overScrollMode="always" />
+
+        <ImageButton
+            android:id="@+id/send_button"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
+            android:background="@drawable/icon_send"
+            android:contentDescription="Send" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
