--- a/app/src/main/res/layout/item_community_feed.xml
+++ b/app/src/main/res/layout/item_community_feed.xml
@@ -13,7 +13,7 @@
             android:id="@+id/divider"
             android:layout_width="0dp"
             android:layout_height="2dp"
-            android:background="#D7D7D5"
+            android:background="@color/gray_scale3"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
