--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -76,17 +76,53 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_profile_edit"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <androidx.cardview.widget.CardView
             android:id="@+id/btn_bookmark"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="28dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            app:cardBackgroundColor="@color/main_orange"
+            app:cardCornerRadius="4dp"
             app:layout_constraintTop_toBottomOf="@id/tv_profile_edit"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/iv_bookmark_mypage"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="18.56dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="즐겨찾기"
+                android:textColor="@color/white"
+                style="@style/Title2"
+                android:layout_marginStart="44.69dp"
+                android:layout_marginTop="18.7dp" />
+            <TextView
+                android:id="@+id/tv_bookmark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textColor="@color/white"
+                style="@style/Title1"
+                android:layout_gravity="right"
+                android:layout_marginTop="18.71dp"
+                android:layout_marginEnd="34dp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_view_more"
+                app:tint="@color/white"
+                android:layout_marginTop="23.32dp"
+                android:layout_marginEnd="19.91dp"
+                android:layout_gravity="right" />
+        </androidx.cardview.widget.CardView>
+
 
         <TextView
             style="@style/Body2"
@@ -351,7 +387,7 @@
             android:layout_width="match_parent"
             android:layout_height="13dp"
             android:layout_marginTop="15dp"
-            android:background="@color/gray_scale3"
+            android:background="#F6F6F6"
             app:layout_constraintTop_toBottomOf="@+id/btn_call"
             />
 
@@ -365,7 +401,8 @@
             app:layout_constraintTop_toBottomOf="@id/divide_3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            >
+            android:visibility="gone">
+
             <ImageView
                 android:id="@+id/ic_logout"
                 android:layout_width="wrap_content"
@@ -382,14 +419,43 @@
                 android:layout_marginStart="8dp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/divide_3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            >
+            <ImageView
+                android:id="@+id/ic_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_logout" />
+
+            <TextView
+                style="@style/Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="로그인"
+                android:textColor="@color/blue"
+                android:layout_gravity="center"
+                android:layout_marginStart="8dp" />
+        </LinearLayout>
+
+
         <FrameLayout
             android:id="@+id/layout_withdraw"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:background="@color/gray_scale3"
+            android:background="#F6F6F6"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_logout">
+            app:layout_constraintTop_toBottomOf="@id/btn_login">
             <TextView
                 android:id="@+id/tv_withdraw"
                 style="@style/Body4"
