--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -45,6 +45,7 @@
 
 
         <TextView
+            android:visibility="gone"
             style="@style/Title2"
             android:textColor="@color/gray_scale8"
             android:id="@+id/tv_nickname"
@@ -57,6 +58,7 @@
             app:layout_constraintTop_toTopOf="@id/iv_profile" />
 
         <TextView
+            android:visibility="gone"
             style="@style/Body2"
             android:textColor="@color/gray_scale7"
             android:id="@+id/tv_profile_edit"
@@ -68,6 +70,8 @@
             app:layout_constraintTop_toBottomOf="@id/tv_nickname" />
 
         <ImageView
+            android:visibility="gone"
+            android:id="@+id/iv_profile_view_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_view_more"
@@ -76,16 +80,44 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_profile_edit"/>
 
+        <LinearLayout
+            android:id="@+id/btn_need_login"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="21.34dp"
+            app:layout_constraintStart_toEndOf="@id/iv_profile"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/iv_profile">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/Title2"
+                android:textColor="@color/gray_scale8"
+                android:text="로그인 해주세요" />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_view_more"
+                android:layout_marginEnd="40dp"
+                android:layout_marginTop="4dp" />
+        </LinearLayout>
+
         <androidx.cardview.widget.CardView
             android:id="@+id/btn_bookmark"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="21dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             app:cardBackgroundColor="@color/main_orange"
             app:cardCornerRadius="4dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_profile_edit"
+            app:layout_constraintTop_toBottomOf="@id/iv_profile"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             >
@@ -400,8 +432,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/divide_3"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="gone">
+            app:layout_constraintEnd_toEndOf="parent">
 
             <ImageView
                 android:id="@+id/ic_logout"
@@ -420,6 +451,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -455,7 +487,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_login">
+            app:layout_constraintTop_toBottomOf="@id/btn_logout">
             <TextView
                 android:id="@+id/tv_withdraw"
                 style="@style/Body4"
