--- a/app/src/main/res/layout/activity_note_user_profile.xml
+++ b/app/src/main/res/layout/activity_note_user_profile.xml
@@ -71,8 +71,7 @@
         app:layout_constraintEnd_toEndOf="@+id/userprofile"
         app:layout_constraintHorizontalBias="0.5"
         app:layout_constraintStart_toStartOf="@+id/userprofile"
-        app:layout_constraintTop_toTopOf="@+id/userprofile"
-        app:layout_constraintVertical_bias="2.0" />
+        app:layout_constraintTop_toTopOf="@+id/userprofile" />
 
     <TextView
         android:id="@+id/userIdTextView"
@@ -88,8 +87,7 @@
         android:gravity="top"
         app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
         app:layout_constraintStart_toStartOf="@+id/rectangle_1"
-        app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
-        app:layout_constraintHorizontalBias="0.5" />
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_1" />
     
     
     
