--- a/app/src/main/res/layout/item_community_feed.xml
+++ b/app/src/main/res/layout/item_community_feed.xml
@@ -19,11 +19,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintWidth_percent="0.95"/>
         
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/item_community_post_user_profile"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/user_profile"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/userimage"
             android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
