--- a/app/src/main/res/layout/item_select_category.xml
+++ b/app/src/main/res/layout/item_select_category.xml
@@ -20,7 +20,7 @@
         android:id="@+id/item_category_checkbox"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:src="@drawable/check_box"
+        android:src="@drawable/button_checkbox_active"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/item_category_title"
@@ -29,7 +29,7 @@
         android:id="@+id/item_category_uncheckbox"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:src="@drawable/uncheck_box"
+        android:src="@drawable/button_uncheckbox"
         android:visibility="gone"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
