--- a/app/src/main/res/layout/activity_community_writing.xml
+++ b/app/src/main/res/layout/activity_community_writing.xml
@@ -15,13 +15,13 @@
 
         <ImageView
             android:id="@+id/community_writing_back_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/back_icon"
-            android:layout_marginTop="8dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/ic_back"
             android:layout_marginStart="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/divider1"/>
 
         <TextView
             android:id="@+id/community_writing_name_tv"
@@ -60,15 +60,16 @@
             android:id="@+id/community_select_category"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/background_spinner_option"
+            android:overlapAnchor="false"
+            android:popupBackground="@color/white"
             android:textColor="@color/gray_scale8"
             android:theme="@style/SpinnerTheme"
-            android:background="@drawable/background_spinner_option"
-            android:popupBackground="@color/white"
-            android:overlapAnchor="false"
-            app:layout_constraintTop_toTopOf="@id/divider1"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/divider2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/divider2" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/divider1" />
 
         <FrameLayout
             android:id="@+id/category_dialog_container"
@@ -123,7 +124,7 @@
             android:id="@+id/community_writing_image_select"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@drawable/community_image_upload"
+            android:src="@drawable/button_photo"
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toBottomOf="@id/divider3"
