--- a/app/src/main/res/layout/dialog_post_community_success.xml
+++ b/app/src/main/res/layout/dialog_post_community_success.xml
@@ -30,9 +30,9 @@
 
         <ImageView
             android:id="@+id/dialog_post_success_btn"
-            android:layout_width="225dp"
-            android:layout_height="60dp"
-            android:src="@drawable/dialog_success_btn"
+            android:layout_width="226dp"
+            android:layout_height="50dp"
+            android:src="@drawable/button_confirm"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="27dp"
             app:layout_constraintStart_toStartOf="parent"
