--- a/app/src/main/res/layout/item_community_feed.xml
+++ b/app/src/main/res/layout/item_community_feed.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -53,15 +54,26 @@
             app:layout_constraintTop_toTopOf="@id/item_community_post_user_profile"
             app:layout_constraintBottom_toBottomOf="@id/item_community_post_user_profile"/>
 
-        <androidx.recyclerview.widget.RecyclerView
+        <ImageView
             android:id="@+id/item_community_post_category_view"
-            android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:orientation="horizontal"
+            android:layout_width="58dp"
+            android:layout_height="22dp"
+            android:src="@drawable/tag_help"
             android:layout_marginStart="10dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/item_community_post_user_profile"
             app:layout_constraintStart_toStartOf="parent"/>
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/item_community_post_category_view"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="22dp"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_marginStart="10dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            tools:listitem="@layout/item_category"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/item_community_post_user_profile"-->
+<!--            app:layout_constraintStart_toStartOf="parent"/>-->
 
         <LinearLayout
             android:id="@+id/item_community_post_container"
@@ -69,6 +81,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/item_community_post_category_view"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -78,8 +91,7 @@
                 android:layout_height="wrap_content"
                 android:text="제목"
                 android:textSize="16sp"
-                android:textColor="@color/gray_scale8"
-                android:layout_marginTop="5dp" />
+                android:textColor="@color/gray_scale8" />
             <TextView
                 android:id="@+id/item_community_post_content"
                 android:layout_width="wrap_content"
@@ -95,10 +107,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/item_community_post_image"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="184dp"
+            android:visibility="gone"
             android:orientation="horizontal"
             android:layout_marginStart="10dp"
             android:layout_marginTop="8dp"
+            tools:listitem="@layout/item_community_feed_photo"
             app:layout_constraintTop_toBottomOf="@id/item_community_post_container"
             app:layout_constraintStart_toStartOf="parent"/>
 
