--- a/app/src/main/res/layout/item_community_feed_photo.xml
+++ b/app/src/main/res/layout/item_community_feed_photo.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="308dp"
+    android:layout_height="184dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <ImageView
-        android:id="@+id/item_category"
-        android:layout_width="58.25dp"
-        android:layout_height="22dp"
-        android:src="@drawable/tag_help"
+        android:id="@+id/item_community_feed_photo"
+        android:layout_width="308dp"
+        android:layout_height="184dp"
+        android:src="@drawable/ex_feed_photo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
